@@ -632,6 +632,14 @@ means a goal is either solved or left unchanged, no simplification.
 
 * Pure/library:
 
+gen_rem(s) abandoned in favour of remove / subtract.
+INCOMPATIBILITY:
+rewrite "gen_rem eq (xs, x)" to "remove (eq o swap) x xs"
+rewrite "gen_rems eq (xs, ys)" to "subtract (eq o swap) ys xs"
+drop "swap" if "eq" is symmetric.
+
+* Pure/library:
+
 infixes ins ins_string ins_int have been abandoned in favour of insert.
 INCOMPATIBILITY: rewrite "x ins(_...) xs" to "insert (op =) x xs"
 
